# Prospector

./: .gitignore  README.md  main.py  my_database.db  pyproject.toml  test.py  test_db.py  test_main.py  test_speech.py  timer.py
configs/: config.py  settings.toml
data/applications/processed_resumes/: 1.json  _SandeshShrestha_CV (1).docx.json  _SandeshShrestha_CV (1).json
data/applications/resumes/: _SandeshShrestha_CV (1).docx
data/jd_files/: AI_Engineer.json  Senior_AI_Engineer.json
pages/: home.py  interview_page.py  interviewer_page.py
src/agents/: evaluation_agent.py  jd_resume_processor_agent.py  resume_processor_agent.py
src/controller/: application_controller.py  interview_controller.py
src/pages/: home.py  interview_page.py  interview_session.py  interviewee_page.py  interviewer_page.py
src/pages/interviewee/: apply_job.py  render_application_info.py  render_final_application.py  render_processing_your_information.py
src/pages/interviewee_pages/: apply_job.py  render_application_info.py
src/pages/interviewer_pages/: render_view_results_tab.py
src/schemas/: evaluation_schema.py  interview_questions_schema.py  job_description_schema.py  job_schema.py  resume_schema.py
src/tools/: answer_evaluation_tool.py  evaluation_tool.py  followup_question_tool.py  jd_processor_tool.py  question_answer_generator.py  question_generator.py  stur_resume_extractor.py
src/utils/: chat_history.py  chat_history_manager.py  file_savings.py  llm_client.py  llm_client_with_history.py  parse_resume.py  resume_extractor.py  resume_parser.py  speech_service.py  validator.py
src/utils/db/: __init__.py  base.py  crud_job.py  crud_user.py  database.py  db_instance.py
src/utils/db/models/: job.py  user.py
