[project]
name = "prospector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "dynaconf>=3.2.11",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "pdfplumber>=0.11.7",
    "ruff>=0.13.1",
    "unstructured[local-inference]>=0.18.15",
]
