[project]
name = "prospector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "dynaconf>=3.2.11",
    "groq>=0.33.0",
    "gtts>=2.5.4",
    "huggingface-hub>=0.35.1",
    "kokoro>=0.9.4",
    "kokoro-onnx>=0.4.9",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "librosa>=0.11.0",
    "misaki>=0.9.4",
    "numpy>=2.3.3",
    "onnxruntime>=1.22.1",
    "pdfplumber>=0.11.7",
    "pyaudio>=0.2.14",
    "pydantic[email]>=2.11.9",
    "pydub>=0.25.1",
    "scipy>=1.16.2",
    "sentencepiece>=0.2.1",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.3",
    "streamlit>=1.50.0",
    "torch>=2.8.0",
    "unstructured[local-inference]>=0.18.15",
    "vosk>=0.3.45",
]
